   calls to the rewriter.
 * Limit recursion depth in the URL rewriter. Defaults to a maximum
   of 100 invocations but is configurable.
 * Fix _session for IE7.
 * Added Server-Sent Events protocol to db changes API.
   See http://www.w3.org/TR/eventsource/ for details.
 * Make password hashing synchronous when using the /_config/admins API.
 * Include user name in show/list ETags.

Storage System:

 * Fixed unnecessary conflict when deleting and creating a
   document in the same batch.

View Server:

 * Speedup in the communication with external view servers.

Futon:

 * Added view request duration to Futon.
 * Disable buttons for actions that the user doesn't have permissions to.

Security:

  * Passwords are now hashed using the PBKDF2 algorithm with a
    configurable work factor.

Test Suite:

  * Moved the JS test suite to the CLI
  * Improved tracebacks printed by the JS CLI tests
  * Improved the reliability of a number of tests

UUID Algorithms:

  * Added the utc_id algorithm.

URL Rewriter & Vhosts:

  * Database name is encoded during rewriting (allowing embedded /'s, etc)

Log System:

  * Allow per-module configuration of log levels.


Version 1.2.1
-------------

This version has not been released yet.

Version 1.2.0
-------------

Authentication:

 * Fix use of OAuth with VHosts and URL rewriting.
 * OAuth secrets can now be stored in the users system database
   as an alternative to key value pairs in the .ini configuration.
   By default this is disabled (secrets are stored in the .ini)
   but can be enabled via the .ini configuration key `use_users_db`
   in the `couch_httpd_oauth` section.
 * Documents in the _users database are no longer publicly
   readable.
 * Confidential information in the _replication database is no
   longer publicly readable.
 * Password hashes are now calculated by CouchDB. Clients are no
   longer required to do this manually.
 * Cookies used for authentication can be made persistent by enabling